--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         
         <nav class="py-3 px-4 md:py-4 md:px-10 flex items-center justify-between sticky top-0 z-40 bg-white/90 backdrop-blur-md border-b border-transparent gsap-hide" id="main-nav">
             <div class="flex items-center gap-2 md:gap-4">
-                <a href="index.html" class="p-2 -ml-2 rounded-full hover:bg-gray-100 transition-colors group" title="Change Character">
+                <a href="/" class="p-2 -ml-2 rounded-full hover:bg-gray-100 transition-colors group" title="Change Character">
                     <i data-lucide="arrow-left" class="w-5 h-5 text-gray-500 group-hover:text-black"></i>
                 </a>
-                <a href="index.html" class="flex items-center gap-2 md:gap-3 cursor-pointer">
+                <a href="/" class="flex items-center gap-2 md:gap-3 cursor-pointer">
                     <div class="w-8 h-8 bg-black rounded-full flex items-center justify-center text-white font-bold text-sm">V</div>
                     <div class="font-bold text-lg tracking-tight">Vansham</div>
                 </a>
@@ -609,3 +609,4 @@ function closeCommunityModal() {
     </script>
 </body>
 </html>
+
